cmake_minimum_required(VERSION 3.8.0)
project(bsdiff)
add_definitions(-DBSDIFF_EXECUTABLE -DBSPATCH_EXECUTABLE)
add_executable(bsdiff bsdiff.c)
add_executable(bspatch bspatch.c)
find_package(BZip2)
if(BZip2_FOUND)
    #include_directories(${BZip2_INCLUDE_DIRS})
    #link_directories(${BZip2_LIBRARY_DIRS})
    #target_link_libraries(bsdiff ${BZip2_LIBRARIES} )
    #target_link_libraries(bspatch ${BZip2_LIBRARIES} )
    target_link_libraries(bsdiff bz2)
    target_link_libraries(bspatch bz2)
else()
endif()
